# fnak

./: .gitignore  CMakeLists.txt  README.md  fnak.rc
assets/: noise.anim  office.anim  officedark.anim
src/: fileio.hpp  graphics.hpp  main.cpp  maps.hpp  menu.hpp  mouse.hpp  sounds.hpp  ui.hpp
